@@ -6,7 +6,7 @@ package SPVM::Regex : precompile {
   use SPVM::StringBuffer;
   use SPVM::Regex::Replacer;
   use SPVM::Regex::Pattern;
-  use SPVM::StringUtil (is_perl_word, isdigit, strtoi, substr, copy_str);
+  use SPVM::StringUtil (is_perl_word, isdigit, strtoi, substr, copy_string);
   use SPVM::Util (INT8_MIN, INT8_MAX, INT16_MIN, INT16_MAX, INT32_MIN, INT32_MAX, INT64_MIN, INT64_MAX, FLT_MIN, FLT_MAX, DBL_MIN, DBL_MAX);
   use SPVM::ArrayUtil (slice_byte);
   has patterns : SPVM::List;
@@ -664,7 +664,7 @@ package SPVM::Regex : precompile {
     
     
     if ($replace_count == 0) {
-      $result = (byte[])copy_str($target);
+      $result = (byte[])copy_string($target);
     }
     else {
       my $match_end = $self->match_start + $self->match_length;
